--- a/app/views/admin/paints/edit.html.haml
+++ b/app/views/admin/paints/edit.html.haml
@@ -1,15 +1,40 @@
-.row
+.admin-subnav
   .col-lg-6.col-sm-12
     %h1
       Edit paint
-    %p
-      = link_to "Back to all paints", admin_paints_path
   .col-lg-6.col-sm-12
-    .card
-      .card-header.text-danger
-        Probably don't edit this.
-      .card-body
+    .alert.alert-danger
+      %h4
+        Can't edit the name.
+      %p
         Otherwise future bikes posted with this paint won't be able to find this paint, and will recreate it.
+
+  - if @paint.id.present?
+    .col-md-6.offset-md-3.mt-2
+      %table.table-list
+        %tbody
+          %tr
+            %td
+              Created
+            %td
+              %span.convertTime.preciseTime
+                = l @paint.created_at, format: :convert_time
+          %tr
+            %td
+              Updated
+            %td
+              %span.convertTime.preciseTime
+                = l @paint.updated_at, format: :convert_time
+          %tr
+            %td
+              Manufacturer
+            %td
+              = @paint.manufacturer&.name
+          %tr
+            %td
+              Bike cache count
+            %td
+              = @paint.bikes_count
 
 
 = form_for [:admin, @paint] do |f|
@@ -19,7 +44,7 @@
     .col-lg-3.col-md-6.col-sm-12
       .form-group
         = f.label :name, 'Description'
-        = f.text_field :name, class: "form-control"
+        = f.text_field :name, disabled: true class: "form-control"
     .col-lg-3.col-md-6.col-sm-12
       .form-group
         = f.label :color_id
@@ -33,11 +58,16 @@
         = f.label :tertiary_color_id, class: "control-label"
         = collection_select( :paint, :tertiary_color_id, Color.all, :id, :name, {prompt: "Choose color"}, class: "form-control" )
 
-  = submit_tag "Update the color", class: "btn btn-success"
+  = submit_tag "Update the paint", class: "btn btn-success"
 
-%hr
+%hr{ style: "margin: 40px 0;" }
 
 - if @bikes.present?
+  %p
+    = number_with_delimiter(@bikes.total_count)
+    Bikes with this paint
+  = paginate @bikes, views_prefix: "admin"
+
   = render partial: "/admin/bikes/table"
 
 - else
