some test is better than no test!

--- a/app/views/admin/paints/edit.html.haml
+++ b/app/views/admin/paints/edit.html.haml
@@ -43,8 +43,8 @@
   .row
     .col-lg-3.col-md-6.col-sm-12
       .form-group
-        = f.label :name, 'Description'
-        = f.text_field :name, disabled: true class: "form-control"
+        = f.label :name
+        = f.text_field :name, disabled: true, class: "form-control"
     .col-lg-3.col-md-6.col-sm-12
       .form-group
         = f.label :color_id
