--- a/app/assets/stylesheets/revised/pages/bikes/show.scss
+++ b/app/assets/stylesheets/revised/pages/bikes/show.scss
@@ -105,6 +105,16 @@
     margin-top: 3 * $vertical-height;
   }
 
+  .color-attrs {
+    line-height: 1.5;
+    .paint-description {
+      font-size: 85%;
+      .attr-title {
+        opacity: 90%;
+      }
+    }
+  }
+
   #map_canvas {
     width: 100%;
     height: 400px;
