--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -220,14 +220,16 @@
           %td
             %a.convertTime{ href: edit_admin_ownership_url(ownership.id) }
               = l ownership.created_at, format: :convert_time
-            %small.less-strong.only-dev-visible
-              = ownership.id
+            - if current_user.developer?
+              %small.less-strong.only-dev-visible
+                = ownership.id
           %td
             - creator = ownership.creator
             - if creator.blank?
               %em.text-warning user deleted
-              %span.only-dev-visible
-                \##{ownership.creator_id}
+              - if current_user.developer
+                %span.only-dev-visible
+                  \##{ownership.creator_id}
             - elsif creator.name.present?
               = creator.name
             - else
