--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -6,6 +6,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     = javascript_pack_tag "application_standalone"
     = stylesheet_pack_tag "application_css"
+    - if params[:hide_dev].present?
+      :css
+        .only-dev-visible { display: none; }
 
   / manually override body_class in a few situations :/
   - admin_body_class = "welcome-page" if current_page?(root_path) and controller_name == "welcome"
