--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,9 @@
     -# https://guides.rubyonrails.org/layouts_and_rendering.html#using-the-content-for-method
     = yield :header
     <!--[if IE]>$('body').prepend("<div id='old-browser-warning'><h4>Your browser is out of date!</h4><p>As a result, Bike Index will not function correctly. <a href=\"http://whatbrowser.com\">Learn more here</a>.</p></div>")<![endif]-->
+    - if params[:hide_dev].present?
+      :css
+        .only-dev-visible { display: none; }
   %body{ id: page_id, class:  body_class }
     %nav.primary-header-nav
       .container
