--- a/app/views/admin/bikes/_table.html.haml
+++ b/app/views/admin/bikes/_table.html.haml
@@ -3,8 +3,10 @@
 - show_serial ||= params[:show_serial].present?
 - render_sortable ||= false
 
+- unless current_user.developer?
+  <style>.bikeTable .only-dev-visible { display: none !important; }</style>
 .full-screen-table
-  %table.table.table-striped.table-bordered.table-sm{ class: show_serial ? "show-admin-bike-table-serial-cell" : "" }
+  %table.table.table-striped.table-bordered.table-sm.bikeTable{ class: show_serial ? "show-admin-bike-table-serial-cell" : "" }
     - unless no_show_header
       %thead.thead-light.sortable
         %th
@@ -37,7 +39,7 @@
               .less-strong-hold
                 %a.small.convertTime{ href: edit_admin_bike_url(bike) }
                   = l bike.created_at, format: :convert_time
-                %span.less-strong-right.d-none.d-md-block
+                %span.less-strong-right.d-none.d-md-block.only-dev-visible
                   - if bike.example
                     %span.text-danger
                       = bike.id
@@ -68,7 +70,7 @@
                     = link_to bike.paint.name, edit_admin_paint_url(bike.paint)
                     = bike.frame_colors.to_sentence
                 - if bike.stolen
-                  %span.less-strong-right
+                  %span.text-danger.less-strong-right
                     stolen
             %td.admin-bike-table-serial-cell
               %small.less-strong
