better handling of requiring recovery reason for admins

--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -187,7 +187,7 @@
           .col-md-6
             .form-group
               = label :mark_recovered_reason, "How was it recovered"
-              = text_area_tag :mark_recovered_reason, nil, rows: 3, class: "form-control"
+              = text_area_tag :mark_recovered_reason, nil, rows: 3, placeholder: "You HAVE to put something in here", class: "form-control"
           .col-md-6
             .form-group
               = label_tag :mark_recovered_we_helped do
