--- a/app/views/admin/bike_sticker_updates/index.html.haml
+++ b/app/views/admin/bike_sticker_updates/index.html.haml
@@ -48,21 +48,39 @@
 
 
   - unless params[:organization_id].present?
-    .row.mt-2
-      .col-md-6.offset-md-3
-        %table.table-list.wide-definition
-          %tbody
-            - matching_sticker_per_org_id = matching_bike_sticker_updates.distinct.pluck(:organization_id).map { |id| [id, matching_bike_sticker_updates.where(organization_id: id).count] }
-            - matching_sticker_per_org_id.sort_by { |id, number| number }.each do |id, number|
-              - organization = Organization.unscoped.find_by_id(id) if id.present?
-              %tr
-                %td
-                  - if organization.present?
-                    = link_to organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: id)), class: (organization.deleted? ? "text-danger" : "")
-                  - else
-                    = link_to "no organization", admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: "none")), class: "gray-link"
-                %td
-                  = number_with_delimiter(number)
+    - update_kinds = BikeStickerUpdate.kinds # Just to ensure consistency
+    .full-screen-table
+      %table.table.table-striped.table-bordered.table-sm
+        %thead.small-header
+          %th Organization
+          / - unless @search_kind == "all"
+          /   - update_kinds.each do |kind|
+          /     %th.small= kind.humanized
+          %th Total
+
+        %tbody
+          - matching_sticker_orgs = matching_bike_sticker_updates.distinct.pluck(:organization_id)
+          / - if @search_kinds == "all"
+          - matching_sticker_per_org_id = matching_bike_sticker_updates.distinct.pluck(:organization_id).map { |id| [id, {total:  matching_bike_sticker_updates.where(organization_id: id).count }] }
+          -# = matching_sticker_per_org_id
+          - matching_sticker_per_org_id.sort_by { |id, values| values[:total] }.each do |id, values|
+            - organization = Organization.unscoped.find_by_id(id) if id.present?
+            %tr
+              %td.small
+                - if organization.present?
+                  = link_to organization.short_name, admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: id)), class: (organization.deleted? ? "text-danger" : "")
+                - else
+                  = link_to "no organization", admin_bike_sticker_updates_path(sortable_search_params.merge(organization_id: "none")), class: "gray-link"
+              / - unless @search_kind == "all"
+              /   - update_kinds.each do |kind|
+              /     %td
+              /       %small= number
+              %td
+                = number_with_delimiter(values[:total])
+          %tr
+            %td Total
+            %td
+              = number_with_delimiter(matching_sticker_per_org_id.map { |id, values| values[:total] }.sum)
 
 .mt-2
   = render partial: "/shared/period_select"
