fix issue with parking notifications table, admin bike update

--- a/app/views/organized/parking_notifications/_table.html.haml
+++ b/app/views/organized/parking_notifications/_table.html.haml
@@ -5,6 +5,7 @@
 - skip_multiselect ||= false
 - hide_status ||= false
 - skip_resolved ||= false
+- render_sortable ||= false
 
 - # TODO: add translations
 :css
