--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -21,9 +21,15 @@
               %span.text-danger
                 Stolen
             = bike.title_string
-          = link_to "non-admin view", bike_path(bike.to_param), class: "text-muted float-right"
+          = link_to "non-admin view", bike_path(bike.to_param, organization_id: bike.creation_organization.to_param), class: "text-muted float-right"
         %table.table-list.mb-0
           %tbody
+            - if current_user.developer?
+              %tr.small
+                %td.only-dev-visible ID
+                %td.only-dev-visible
+                  %code= bike.id
+
             %tr
               %td
                 Serial number
@@ -154,6 +160,11 @@
       .col-md-6
         %table.table-list
           %tbody
+            - if current_user.developer?
+              %tr.small
+                %td.only-dev-visible ID
+                %td.only-dev-visible
+                  %code= stolen_record.id
             %tr
               %td
                 Theft description
