--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -109,7 +109,7 @@
                     %em.small.less-strong
                       = origin_display(@bike.creation_description)
                 - passive_organization.additional_registration_fields.each do |reg_field|
-                  - bike_attr = PaidFeature.reg_field_bike_attrs[reg_field.to_sym]
+                  - bike_attr = OrganizationFeature.reg_field_bike_attrs[reg_field.to_sym]
                   - if bike_attr == "registration_address"
                     %tr
                       %td= t(".address")
