--- a/app/views/admin/paid_features/edit.html.haml
+++ b/app/views/admin/paid_features/edit.html.haml
@@ -1,7 +1,7 @@
 %h1
-  Edit #{@paid_feature.name}
+  Edit #{@organization_feature.name}
 
-- if @paid_feature.locked?
+- if @organization_feature.locked?
   .card.bg-danger{ style: "margin: 40px 0;" }
     .card-body
       %p
