--- a/app/views/admin/paid_features/index.html.haml
+++ b/app/views/admin/paid_features/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-lg-10.col-sm-12
-    %h1 Paid Features
+    %h1 Organization Features
   .col-lg-2.col-sm-12
     = link_to "New Feature", new_admin_organization_feature_url, class: "btn btn-success float-right"
 
