--- a/app/views/admin/bikes/edit.html.haml
+++ b/app/views/admin/bikes/edit.html.haml
@@ -13,7 +13,7 @@
   = render partial: "/admin/recoveries/table", locals: { recoveries: @recoveries, skip_bike: true }
 
 .admin-subnav.midpage-subnav
-  .col-8.col-lg-10
+  .col-6
     %h1
       Edit Bike
       - if @bike.deleted?
@@ -21,28 +21,8 @@
           Deleted at:
           %span.convertTime.preciseTime
             = l @bike.deleted_at, format: :convert_time
-  .col-4.col-lg-2
-    .text-right
-      - scorer = @bike.credibility_scorer
-      .credibility-score{ style: "background: #{credibility_scorer_color(scorer.score)};" }
-        .main-crediblity-score-box
-          %a.credibility-title{ href: ".score-details", data: { toggle: "collapse" } }
-            Credibility Score
-          %span.score-number
-            = scorer.score
-        .score-details.collapse.text-left
-          %small.details-title
-            Factors in score:
-          %table.table-list
-            %tbody
-              - CredibilityScorer.permitted_badges_hash(scorer.badges).each do |badge, value|
-                %tr
-                  %td
-                    %strong{ class: (value < 0 ? "text-danger" : "") }
-                      = value
-                  %td
-                    %small
-                      = badge.to_s.humanize
+  .col-6.text-right
+    = render partial: "/bikes/credibility_score", locals: { bike: @bike }
 
 - if @bike.user_hidden
   - if @bike.unregistered_parking_notification?
